# observ_rust_stack

./: GLITCHTIP_INTEGRATION.md  GLITCHTIP_MANUAL_SETUP.md  GLITCHTIP_RUST_SETUP.md  README.md  start.sh  stop.sh
actix-app/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
actix-app/src/: main.rs
bruno_hit/: 01-health-check.bru  02-metrics.bru  03-user-success.bru  04-latency-test.bru  05-database-simulation.bru  06-not-found-error.bru  07-validation-error.bru  08-panic-error.bru  09-generic-error.bru  bruno.json
observability/glitchtip/: README.md  docker-compose.yml
observability/openobserve/: docker-compose.yml
observability/openobserve/config/: clickhouse.xml
