[package]
name = "actix-app"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio","metrics","logs"] }

opentelemetry-otlp = { version = "0.31", features = [
    "http-proto",
    "trace",
    "metrics",
    "logs"
] }

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json"
] }

tracing-opentelemetry = "0.32"

opentelemetry-appender-tracing = "0.31"

uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
base64 = "0.22"
dotenvy = "0.15.7"
tracing-actix-web = "0.7.21"

# Sentry/Glitchtip error tracking
sentry = { version = "0.47.0", features = ["panic"] }
